2015-01-15  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r174710. rdar://problem/19451946

    2014-10-14  Brent Fulgham  <bfulgham@apple.com>

            [Win] Unreviewed build fix after r174698 and r174709.

            * platform/graphics/avfoundation/cf/CDMSessionAVFoundationCF.cpp:
            * platform/graphics/avfoundation/cf/CDMSessionAVFoundationCF.h:
            * platform/graphics/avfoundation/cf/MediaPlayerPrivateAVFoundationCF.cpp:
            (WebCore::MediaPlayerPrivateAVFoundationCF::supportsKeySystem):
            (WebCore::AVFWrapper::shouldWaitForLoadingOfResource):
            * platform/graphics/avfoundation/cf/MediaPlayerPrivateAVFoundationCF.h:

2015-01-15  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r174709. rdar://problem/19451946

    2014-10-14  Brent Fulgham  <bfulgham@apple.com>

            [Win] Unreviewed build fix after r174698

            * platform/graphics/avfoundation/cf/CDMSessionAVFoundationCF.cpp:
            * platform/graphics/avfoundation/cf/CDMSessionAVFoundationCF.h:
            * platform/graphics/avfoundation/cf/MediaPlayerPrivateAVFoundationCF.cpp:
            (WebCore::MediaPlayerPrivateAVFoundationCF::createSession):

2015-01-15  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r174698. rdar://problem/19451946

    2014-10-14  Brent Fulgham  <bfulgham@apple.com>

            [Win] Enable Encrypted Media Support
            https://bugs.webkit.org/show_bug.cgi?id=137710
            <rdar://problem/18652699>

            Reviewed by Jer Noble.

            This feature is covered by existing media tests.

            * platform/graphics/avfoundation/cf/MediaPlayerPrivateAVFoundationCF.cpp:
            (WebCore::destroyAVFWrapper): Remove redundant ASSERT.
            * platform/graphics/ca/win/PlatformCALayerWinInternal.cpp:
            (displayOnMainThreadContext::displayOnMainThreadContext): Added.
            (redispatchOnMainQueue): Added.